refactor: 도메인 끼리 getter를 최대한 사용하지 않도록 기능 책임 이동
- 로또를 비교하여 Rank를 구하는 기능을 WinningLotto로 이동
- Money 클래스에서 Money 객체를 인자로 받아서 계산을 수행하도록 수정
- 총 수익을 계산하는 기능을 Rank로 이동
- 프로덕션 코드, 테스트 코드 리네이밍